packages/core/test/fixtures/parser/errors/rootref-in-activity.idef0
activity A0 "...A0 is for context only" {
    I1 "in"
    ...A0
}
